# audioscan

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: POLISH_2026-06-03_audioscan.md  POLISH_2026-06-03_audioscan_R4-R7.md  POLISH_2026-06-03_audioscan_postround.md  _config.yml  index.md
docs/_layouts/: default.html
examples/: c_api.c
include/: audioscan.h
src/: ffi.rs  lib.rs  main.rs
tests/: batch.rs  cli_golden.rs  codecs.rs  contract.rs  ffi.rs  golden_loudness.rs  robustness.rs  timeout.rs
tests/fixtures/: tone_1khz_1s.flac
tools/: make_codec_fixtures.md  make_signal.py
