[package]
name = "audioscan"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
ebur128 = "0.1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Default features already cover wav/flac/ogg/vorbis/pcm/adpcm; add the lossy
# codecs Bootleg also ingests (mp3, aac/m4a via isomp4).
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
