[package]
name = "audioscan"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Fast CLI audio analysis for format metadata, EBU R128 loudness, and silence windows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KiwiMaddog2020/audioscan"
keywords = ["audio", "loudness", "ebu-r128", "silence", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
thiserror = "1.0"
ebur128 = "0.1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Default features already cover wav/flac/ogg/vorbis/pcm/adpcm; add the lossy
# codecs Bootleg also ingests (mp3, aac/m4a via isomp4).
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
rayon = "1"

[dev-dependencies]
hound = "3"
serde_json = "1.0.150"
